--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/dickyindra/react-component-module-example/issues"
   },
-  "homepage": "https://github.com/dickyindra/react-component-module-example#readme"
+  "homepage": "https://github.com/dickyindra/react-component-module-example#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3"
+  }
 }
