--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3"
+    "@babel/preset-react": "^7.8.3",
+    "prop-types": "^15.7.2"
   }
 }
