--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "./lib/index.js",
     "scripts": {
         "storybook": "start-storybook",
-        "build": "babel src --out-file ./lib/index.js",
+        "build": "webpack",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -29,6 +29,9 @@
         "@babel/preset-react": "^7.8.3",
         "@storybook/react": "^5.3.3",
         "babel-loader": "^8.0.6",
-        "prop-types": "^15.7.2"
+        "path": "^0.12.7",
+        "prop-types": "^15.7.2",
+        "webpack": "^4.41.5",
+        "webpack-cli": "^3.3.10"
     }
 }
