--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
         "@babel/preset-react": "^7.8.3",
         "@storybook/react": "^5.3.3",
         "babel-loader": "^8.0.6",
+        "node-sass": "^4.13.1",
         "path": "^0.12.7",
         "prop-types": "^15.7.2",
+        "sass-loader": "^8.0.2",
         "webpack": "^4.41.5",
-        "webpack-cli": "^3.3.10"
+        "webpack-cli": "^3.3.10",
+        "webpack-merge": "^4.2.2"
     }
 }
